chore: 쓸데없는 주석 제거 및 변경된 이름 통일